// STATUS: PROVISIONAL â€” Breaking changes allowed until Schema Freeze.
// PACKAGE: mcp.unity.v1
syntax = "proto3";
package mcp.unity.v1;

// Import common types
import "mcp/unity/v1/common.proto";
import "mcp/unity/v1/editor_control.proto";
import "mcp/unity/v1/assets.proto";
import "mcp/unity/v1/build.proto";
import "mcp/unity/v1/operations.proto";
import "mcp/unity/v1/events.proto";

// Top-level envelope for all IPC messages
message IpcEnvelope {
  string correlation_id = 1; // Empty for handshake messages
  oneof kind {
    IpcRequest request = 2;
    IpcResponse response = 3;
    IpcEvent event = 4;
  }
}


// Request message with typed payloads
message IpcRequest {
  oneof payload {
    // Health check
    HealthRequest health = 1;
    
    // Editor control
    Empty get_play_mode = 10;
    SetPlayModeRequest set_play_mode = 11;
    GetCompileDiagnosticsRequest get_compile_diagnostics = 12;
    GetProjectSettingsRequest get_project_settings = 13;
    SetProjectSettingsRequest set_project_settings = 14;
    
    // Assets
    AssetsRequest assets = 20;
    
    // Build
    BuildRequest build = 30;
    
    // Operations
    OperationGetRequest operation_get = 40;
    OperationCancelRequest operation_cancel = 41;
  }
}

// Response message with typed payloads
message IpcResponse {
  string correlation_id = 1; // Matches the request correlation_id
  oneof payload {
    // Health check
    HealthResponse health = 2;
    
    // Editor control
    GetPlayModeResponse get_play_mode = 10;
    SetPlayModeResponse set_play_mode = 11;
    GetCompileDiagnosticsResponse get_compile_diagnostics = 12;
    GetProjectSettingsResponse get_project_settings = 13;
    SetProjectSettingsResponse set_project_settings = 14;
    
    // Assets
    AssetsResponse assets = 20;
    
    // Build
    BuildResponse build = 30;
    
    // Operations
    OperationGetResponse operation_get = 40;
    OperationCancelResponse operation_cancel = 41;
  }
}

// Event message for server-to-client notifications
message IpcEvent {
  int64 monotonic_ts_ns = 1;
  oneof payload {
    LogEvent       log = 10;
    OperationEvent op  = 11;
  }
}